--- a/Tarea 02.ipynb
+++ b/Tarea 02.ipynb
@@ -10,11 +10,444 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8b0786ff",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Carga de librerías pandas y geopandas.\n",
+    "\n",
+    "import pandas as pd\n",
+    "import pandas as gpd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "87685633",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.4.4'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Obtener versión de geopandas\n",
+    "gpd.__version__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0afc1d7",
+   "metadata": {},
+   "source": [
+    "## Carga de datos de Covid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2131a195",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Carga de los datos 05_30_22_CSV_GENERAL\n",
+    "## Se coloca sep=\";\", para la división de columnas por medio de ;\n",
+    "general = gpd.read_csv(\"datos/05_30_22_CSV_GENERAL.csv\", sep=\";\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "989c34a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FECHA</th>\n",
+       "      <th>SE</th>\n",
+       "      <th>positivos</th>\n",
+       "      <th>nue_posi</th>\n",
+       "      <th>conf_lab</th>\n",
+       "      <th>conf_nexo</th>\n",
+       "      <th>muj_posi</th>\n",
+       "      <th>hom_posi</th>\n",
+       "      <th>extranj_posi</th>\n",
+       "      <th>costar_posi</th>\n",
+       "      <th>...</th>\n",
+       "      <th>CEACOINS_UCI</th>\n",
+       "      <th>CEACOINS_SALON</th>\n",
+       "      <th>PAUT_UCI</th>\n",
+       "      <th>PAUT_SALON</th>\n",
+       "      <th>HVITO_UCI</th>\n",
+       "      <th>HVITO_SALON</th>\n",
+       "      <th>UNICAR_SAL</th>\n",
+       "      <th>UNICAR_UCI</th>\n",
+       "      <th>ARS-SIQ_SAL</th>\n",
+       "      <th>ARS_SIQ_UCI</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>06/03/2020</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>07/03/2020</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>08/03/2020</td>\n",
+       "      <td>11</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>09/03/2020</td>\n",
+       "      <td>11</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10/03/2020</td>\n",
+       "      <td>11</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>811</th>\n",
+       "      <td>26/05/2022</td>\n",
+       "      <td>21</td>\n",
+       "      <td>896712</td>\n",
+       "      <td>3499</td>\n",
+       "      <td>3272.0</td>\n",
+       "      <td>227.0</td>\n",
+       "      <td>460886.0</td>\n",
+       "      <td>435826.0</td>\n",
+       "      <td>102478.0</td>\n",
+       "      <td>794234.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>812</th>\n",
+       "      <td>27/05/2022</td>\n",
+       "      <td>21</td>\n",
+       "      <td>899404</td>\n",
+       "      <td>2692</td>\n",
+       "      <td>2491.0</td>\n",
+       "      <td>201.0</td>\n",
+       "      <td>462372.0</td>\n",
+       "      <td>437032.0</td>\n",
+       "      <td>102727.0</td>\n",
+       "      <td>796677.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>813</th>\n",
+       "      <td>28/05/2022</td>\n",
+       "      <td>21</td>\n",
+       "      <td>901542</td>\n",
+       "      <td>2138</td>\n",
+       "      <td>1907.0</td>\n",
+       "      <td>231.0</td>\n",
+       "      <td>463595.0</td>\n",
+       "      <td>437947.0</td>\n",
+       "      <td>103010.0</td>\n",
+       "      <td>798532.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>814</th>\n",
+       "      <td>29/05/2022</td>\n",
+       "      <td>22</td>\n",
+       "      <td>903213</td>\n",
+       "      <td>1671</td>\n",
+       "      <td>1603.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>464547.0</td>\n",
+       "      <td>438666.0</td>\n",
+       "      <td>103241.0</td>\n",
+       "      <td>799972.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>815</th>\n",
+       "      <td>30/05/2022</td>\n",
+       "      <td>22</td>\n",
+       "      <td>904934</td>\n",
+       "      <td>1721</td>\n",
+       "      <td>1648.0</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>465503.0</td>\n",
+       "      <td>439431.0</td>\n",
+       "      <td>103460.0</td>\n",
+       "      <td>801474.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>816 rows × 144 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          FECHA  SE  positivos  nue_posi  conf_lab  conf_nexo  muj_posi  \\\n",
+       "0    06/03/2020  10          2         2       NaN        NaN       NaN   \n",
+       "1    07/03/2020  10          7         5       NaN        NaN       NaN   \n",
+       "2    08/03/2020  11         10         3       NaN        NaN       NaN   \n",
+       "3    09/03/2020  11         12         2       NaN        NaN       NaN   \n",
+       "4    10/03/2020  11         13         1       NaN        NaN       7.0   \n",
+       "..          ...  ..        ...       ...       ...        ...       ...   \n",
+       "811  26/05/2022  21     896712      3499    3272.0      227.0  460886.0   \n",
+       "812  27/05/2022  21     899404      2692    2491.0      201.0  462372.0   \n",
+       "813  28/05/2022  21     901542      2138    1907.0      231.0  463595.0   \n",
+       "814  29/05/2022  22     903213      1671    1603.0       68.0  464547.0   \n",
+       "815  30/05/2022  22     904934      1721    1648.0       73.0  465503.0   \n",
+       "\n",
+       "     hom_posi  extranj_posi  costar_posi  ...  CEACOINS_UCI  CEACOINS_SALON  \\\n",
+       "0         NaN           NaN          NaN  ...           NaN             NaN   \n",
+       "1         NaN           NaN          NaN  ...           NaN             NaN   \n",
+       "2         NaN           NaN          NaN  ...           NaN             NaN   \n",
+       "3         NaN           NaN          NaN  ...           NaN             NaN   \n",
+       "4         6.0           3.0         10.0  ...           NaN             NaN   \n",
+       "..        ...           ...          ...  ...           ...             ...   \n",
+       "811  435826.0      102478.0     794234.0  ...           0.0             0.0   \n",
+       "812  437032.0      102727.0     796677.0  ...           0.0             0.0   \n",
+       "813  437947.0      103010.0     798532.0  ...           0.0             0.0   \n",
+       "814  438666.0      103241.0     799972.0  ...           0.0             0.0   \n",
+       "815  439431.0      103460.0     801474.0  ...           0.0             0.0   \n",
+       "\n",
+       "     PAUT_UCI  PAUT_SALON  HVITO_UCI HVITO_SALON  UNICAR_SAL UNICAR_UCI  \\\n",
+       "0         NaN         NaN        NaN         NaN         NaN        NaN   \n",
+       "1         NaN         NaN        NaN         NaN         NaN        NaN   \n",
+       "2         NaN         NaN        NaN         NaN         NaN        NaN   \n",
+       "3         NaN         NaN        NaN         NaN         NaN        NaN   \n",
+       "4         NaN         NaN        NaN         NaN         NaN        NaN   \n",
+       "..        ...         ...        ...         ...         ...        ...   \n",
+       "811       0.0         2.0        0.0         4.0         0.0        0.0   \n",
+       "812       0.0         2.0        0.0         3.0         0.0        0.0   \n",
+       "813       0.0         2.0        0.0         3.0         0.0        0.0   \n",
+       "814       0.0         2.0        0.0         3.0         0.0        0.0   \n",
+       "815       0.0         2.0        0.0         3.0         0.0        0.0   \n",
+       "\n",
+       "    ARS-SIQ_SAL ARS_SIQ_UCI  \n",
+       "0           NaN         NaN  \n",
+       "1           NaN         NaN  \n",
+       "2           NaN         NaN  \n",
+       "3           NaN         NaN  \n",
+       "4           NaN         NaN  \n",
+       "..          ...         ...  \n",
+       "811         0.0         0.0  \n",
+       "812         0.0         0.0  \n",
+       "813         0.0         0.0  \n",
+       "814         0.0         0.0  \n",
+       "815         0.0         0.0  \n",
+       "\n",
+       "[816 rows x 144 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Desplegar datos de general\n",
+    "general"
+   ]
   }
  ],
  "metadata": {
